<resources>
    <string name="app_name">Quiz_App</string>
    <string name="title">Daily Quiz App</string>
    <string name="q1">Q1: Which telescope photographed the Pillars of Creation in 1995?</string>
    <string name="q2">Q2: Which is the furthest planet from the Sun in our solar system?</string>
    <string name="q3">Q3: In which US state would you find the city of Oakland?</string>
    <string name="q4">Q4: Select the players who played in Realmadrid football team</string>
    <string name="q5">Q5: Complete the following sentence with the correct answer</string>

    <string name="q1o1">Hubble Space Telescope</string>
    <string name="q1o2">James Webb Space Telescope</string>
    <string name="q1o3">Spitzer Space Telescope</string>

    <string name="q2o1">Neptune</string>
    <string name="q2o2">Jupiter</string>
    <string name="q2o3">Uranus</string>

    <string name="q3o1">Colorado </string>
    <string name="q3o2">Nevada </string>
    <string name="q3o3">California</string>

    <string name="q4o1">C.Rolando</string>
    <string name="q4o2">Benzema</string>
    <string name="q4o3">messi</string>

    <string name="q5o2">H2O stands for </string>
</resources>
