<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/layout_bg"
    >

    <TextView
        android:fontFamily="@font/pacificoregular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:layout_marginTop="8dp"
        android:layout_height="1dp"></LinearLayout>


    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            android:text="@string/q1"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/q1"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/q1o1"
                android:text="@string/q1o1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/q1o2"
                android:text="@string/q1o2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/q1o3"
                android:text="@string/q1o3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            android:text="@string/q2"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/q2"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/q2o1"
                android:text="@string/q2o1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/q2o2"
                android:text="@string/q2o2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/q2o3"
                android:text="@string/q2o3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            android:text="@string/q3"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/q3"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/q3o1"
                android:text="@string/q3o1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/q3o2"
                android:text="@string/q3o2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/q3o3"
                android:text="@string/q3o3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            android:text="@string/q4"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/q4o1"
                android:text="@string/q4o1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/q4o2"
                android:text="@string/q4o2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/q4o3"
                android:text="@string/q4o3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18sp"
            android:text="@string/q5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/q5o2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/q5o1"
                android:layout_width="64dp"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_marginTop="24dp"
        android:text="Submit Answers"
        android:layout_gravity="center"
        android:onClick="submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
</ScrollView>